// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchBar snapshots > matches snapshot in initial (empty) state 1`] = `
<div>
  <div
    style="position: relative; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
  >
    <div
      style="background: rgba(19, 19, 28, 0.92); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 10px; backdrop-filter: blur(12px); display: flex; align-items: center; gap: 10px; padding: 10px 14px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search"
        fill="none"
        height="16"
        stroke="#9898b3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="flex-shrink: 0;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        placeholder="Search movies, directors, actors..."
        style="background: transparent; border: none none; font-size: 14px; color: #f0f0f0; font-family: Montserrat, sans-serif; flex-grow: 1; flex-shrink: 1; flex-basis: 0%; outline-color: none; outline-style: none; outline-width: initial;"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`SearchBar snapshots > matches snapshot with suggestions open 1`] = `
<div>
  <div
    style="position: relative; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
  >
    <div
      style="background: rgba(19, 19, 28, 0.92); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 10px; backdrop-filter: blur(12px); display: flex; align-items: center; gap: 10px; padding: 10px 14px;"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search"
        fill="none"
        height="16"
        stroke="#9898b3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="flex-shrink: 0;"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
      <input
        placeholder="Search movies, directors, actors..."
        style="background: transparent; border: none none; font-size: 14px; color: #f0f0f0; font-family: Montserrat, sans-serif; flex-grow: 1; flex-shrink: 1; flex-basis: 0%; outline-color: none; outline-style: none; outline-width: initial;"
        value="Vertigo"
      />
      <button
        style="background: none none; border: none none; cursor: pointer; padding: 0px; display: flex;"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="14"
          stroke="#9898b3"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      style="position: absolute; top: calc(100% + 6px); left: 0px; right: 0px; background: rgba(19, 19, 28, 0.98); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 10px; overflow: hidden; z-index: 1000; box-shadow: 0 8px 32px rgba(0,0,0,0.6); backdrop-filter: blur(12px);"
    >
      <button
        style="width: 100%; background: none none; padding: 9px 14px; text-align: left; cursor: pointer; display: flex; flex-direction: row; align-items: center; gap: 10px; border-style: none none solid; border-color: none none rgba(255, 255, 255, 0.05); border-image: initial; border-top-width: initial; border-right-width: initial; border-bottom-width: 1px; border-left-width: initial;"
      >
        <div
          style="width: 30px; height: 30px; border-radius: 8px; background: #1c1c2b; border: 1px solid rgba(255, 255, 255, 0.07); display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-film"
            fill="none"
            height="14"
            stroke="#e74c3c"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M7 3v18"
            />
            <path
              d="M3 7.5h4"
            />
            <path
              d="M3 12h18"
            />
            <path
              d="M3 16.5h4"
            />
            <path
              d="M17 3v18"
            />
            <path
              d="M17 7.5h4"
            />
            <path
              d="M17 16.5h4"
            />
          </svg>
        </div>
        <div
          style="display: flex; flex-direction: column; gap: 2px; min-width: 0;"
        >
          <span
            style="font-size: 13px; font-weight: 700; font-family: Montserrat, sans-serif; color: #f0f0f0;"
          >
            Vertigo
          </span>
          <span
            style="font-size: 11px; font-family: Montserrat, sans-serif; color: #9898b3;"
          >
            1958 · Alfred Hitchcock
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;
